# fatigue

./: .cz.toml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  Readme.md
.github/: .kodiak.toml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: bump.yaml  ci.yaml  lint.yaml  pr.yaml  publish.yaml  release.yaml
examples/: complete.yaml  simple.yaml  simple_plan.yaml  test-1.json  with_header.csv  without_header.csv
examples/test-api/: Cargo.toml
examples/test-api/src/: main.rs
examples/test-api/test-api/: Cargo.toml
fatigue/: Cargo.toml
fatigue/src/: main.rs
fatigue/src/output/: json.rs  mod.rs  pretty.rs
libfatigue/: Cargo.toml  README.md
libfatigue/src/: factories.rs  lib.rs  runner.rs  util.rs
libfatigue/src/actions/: delay.rs  mod.rs  print.rs  request.rs
libfatigue/src/config/: types.rs
libfatigue/src/context/: helpers.rs  iteration.rs  mod.rs  result.rs
libfatigue/src/context/actions/: csv.rs  json.rs  literal.rs  mod.rs
libfatigue/tests/: test_config.rs
