[package]
name = "fatigue"
version = "0.2.15"
authors = ["Dylan Ross <pdylanross@gmail.com>"]
edition = "2021"
description = "an extensible load testing tool"
readme = "README.md"
homepage = "https://github.com/pdylanross/fatigue"
repository = "https://github.com/pdylanross/fatigue"
license = "Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.9", features = ["derive"] }
console = "0.15.8"
crossterm = "0.28.1"
figment = { version = "0.10.19", features = ["env", "yaml"] }
humantime = "2.1.0"
itertools = "0.13.0"
libfatigue = { path = "../libfatigue", version = "0.2.15" }
num-format = "0.4.4"
prettytable-rs = "0.10.0"
serde = "1.0.214"
serde_json = "1.0.132"
thiserror = "1.0.68"
tokio = { version = "1.41.0", features = ["full"] }
