[package]
name = "fatigue"
version = "0.2.17"
authors = ["Dylan Ross <pdylanross@gmail.com>"]
edition = "2021"
description = "an extensible load testing tool"
readme = "README.md"
homepage = "https://github.com/pdylanross/fatigue"
repository = "https://github.com/pdylanross/fatigue"
license = "Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.9", features = ["derive"] }
console = "0.16.1"
crossterm = "0.29.0"
figment = { version = "0.10.19", features = ["env", "yaml"] }
humantime = "2.3.0"
itertools = "0.14.0"
libfatigue = { path = "../libfatigue", version = "0.2.17" }
num-format = "0.4.4"
prettytable-rs = "0.10.0"
serde = "1.0.228"
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
