[package]
name = "libfatigue"
version = "0.2.15"
authors = ["Dylan Ross <pdylanross@gmail.com>"]
description = "an extensible load testing library"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/pdylanross/fatigue"
repository = "https://github.com/pdylanross/fatigue"
license = "Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.81"
csv = "1.3.0"
dashmap = "5.2.0"
futures = "0.3.30"
hdrhistogram = "7.5.4"
humantime-serde = "1.1.1"
liquid = "0.26.6"
num_cpus = "1.16.0"
petname = "1.1.2"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
serde_yaml = "0.9.34"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
url = "2.5.2"
