[package]
name = "libfatigue"
version = "0.2.17"
authors = ["Dylan Ross <pdylanross@gmail.com>"]
description = "an extensible load testing library"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/pdylanross/fatigue"
repository = "https://github.com/pdylanross/fatigue"
license = "Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.89"
csv = "1.3.1"
dashmap = "5.2.0"
futures = "0.3.31"
hdrhistogram = "7.5.4"
humantime-serde = "1.1.1"
liquid = "0.26.11"
num_cpus = "1.17.0"
petname = "1.1.2"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
serde_yaml = "0.9.34"
thiserror = "2.0.15"
tokio = { version = "1.45.1", features = ["full"] }
url = "2.5.4"
