[package]
edition = "2021"
name = "test-api"
publish = false
version = "0.2.16"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.9.0"
rocket = {version = "0.5.1", features = ["json"]}
serde = {version = "1.0.218", features = ["derive"]}
serde_json = "1.0.139"
uuid = {version = "1.15.1", features = ["v4"]}
