[package]
edition = "2021"
name = "test-api"
publish = false
version = "0.2.17"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.9.2"
rocket = {version = "0.5.1", features = ["json"]}
serde = {version = "1.0.226", features = ["derive"]}
serde_json = "1.0.145"
uuid = {version = "1.18.1", features = ["v4"]}
