[package]
edition = "2021"
name = "test-api"
publish = false
version = "0.2.19"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.9.3"
rocket = {version = "0.5.1", features = ["json"]}
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
uuid = {version = "1.20.0", features = ["v4"]}
